--- a/src/app/platform/components/hotel-option/hotel-option.component.html
+++ b/src/app/platform/components/hotel-option/hotel-option.component.html
@@ -104,7 +104,7 @@
 
             <td align="right">
               <p>
-                <a href="javascript:void(0)" class="btn btn-secondary smy" (click)="openModalValuation(option, hotelDetailInfo)" i18n="@@book">Book</a>
+                <a href="javascript:void(0)" class="btn btn-secondary smy" (click)="openModalValuation(option, hotelDetailInfo)" i18n="@@quote">Quote</a>
               </p>
             </td>
 
