--- a/src/app/platform/components/hotel-option/hotel-option.component.html
+++ b/src/app/platform/components/hotel-option/hotel-option.component.html
@@ -1,6 +1,6 @@
 <div class="mo-search-item" *ngIf="hotel && hotel.options && hotel.options.length">
   <div class="media">
-    <img class="d-flex" style="width: 250px; height:250px"  (error)="registerBrokenURL($event, mediaMainImageIndex)" src="{{this.images[mediaMainImageIndex] && this.images.length !== this.imageErrors.length ? this.images[mediaMainImageIndex] : 'http://cdn.roomdi.com/wsimgresize/resize/crop/250/250/cdn.roomdi.com/contenidosShared/fotos/agregadorHotelero/fotos_hotelv4/1/355/7.jpg?f=1612252115'}}"
+    <img class="d-flex" style="width: 250px; height:250px" (error)="registerBrokenURL($event, mediaMainImageIndex)" src="{{this.images[mediaMainImageIndex] && this.images.length !== this.imageErrors.length ? this.images[mediaMainImageIndex] : 'http://cdn.roomdi.com/wsimgresize/resize/crop/250/250/cdn.roomdi.com/contenidosShared/fotos/agregadorHotelero/fotos_hotelv4/1/355/7.jpg?f=1612252115'}}"
       alt="Generic placeholder image" (error)="mainImage($event.target)" (click)="openModalCarousel()">
     <div class="media-body">
       <h5 class="hotelname mt-0">{{hotelDetailInfo?.hotelName}}
@@ -38,6 +38,7 @@
             <th i18n="@@mealplan">Meaplan</th>
             <th i18n="@@no-expenses-until">No expenses until</th>
             <th i18n="@@rate">Rate</th>
+            <th i18n="@@payment-type">Payment type</th>
             <th i18n="@@price-type">Price type</th>
             <th i18n="@@price">Price</th>
             <th i18n="@@total-price">Total price</th>
@@ -64,35 +65,14 @@
             </ng-template>
 
             <td>{{option.rateRules | package}}</td>
+            <td>{{option.paymentType}}</td>
 
-            <ng-container *ngIf="environment.organization.code === 'smy'">
-              <ng-container *ngIf="option.price.binding; else noBinding">
-                <td (click)="openBindingModal(option)">
-                  <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" i18n-title="@@penalty-tooltip"
-                    title="Binding"></i>
-                  <span i18n="@@min-sell-price">Minimum selling price</span>
-                </td>
-                <td>
-                  <div *ngFor="let room of option.rooms">{{room.roomPrice.price.gross | number : '1.2-2'}} {{room.roomPrice.price.currency}}</div>
-                </td>
-                <td class="price">
-                  {{option.price.gross | number : '1.2-2'}} {{option.price.currency}}
-                </td>
-              </ng-container>
-
-              <ng-template #noBinding>
-                <td i18n="@@net">Net</td>
-                <td>
-                  <div *ngFor="let room of option.rooms">{{room.roomPrice.price.net | number : '1.2-2'}} {{room.roomPrice.price.currency}}</div>
-                </td>
-                <td class="price">
-                  {{option.price.net | number : '1.2-2'}} {{option.price.currency}}
-                </td>
-              </ng-template>
-            </ng-container>
-
-            <ng-container *ngIf="environment.organization.code === 'mgr'">
-              <td i18n="@@gross">Gross</td>
+            <ng-container *ngIf="option.price.binding; else noBinding">
+              <td (click)="openBindingModal(option)">
+                <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" i18n-title="@@penalty-tooltip"
+                  title="Binding"></i>
+                <span i18n="@@min-sell-price">Minimum selling price</span>
+              </td>
               <td>
                 <div *ngFor="let room of option.rooms">{{room.roomPrice.price.gross | number : '1.2-2'}} {{room.roomPrice.price.currency}}</div>
               </td>
@@ -100,6 +80,16 @@
                 {{option.price.gross | number : '1.2-2'}} {{option.price.currency}}
               </td>
             </ng-container>
+
+            <ng-template #noBinding>
+              <td i18n="@@net">Net</td>
+              <td>
+                <div *ngFor="let room of option.rooms">{{room.roomPrice.price.net | number : '1.2-2'}} {{room.roomPrice.price.currency}}</div>
+              </td>
+              <td class="price">
+                {{option.price.net | number : '1.2-2'}} {{option.price.currency}}
+              </td>
+            </ng-template>
 
 
             <td align="right">
