--- a/src/app/platform/components/rq-modal/rq-modal.component.html
+++ b/src/app/platform/components/rq-modal/rq-modal.component.html
@@ -3,9 +3,25 @@
     <span aria-hidden="true">×</span>
   </button>
 
+  <div class="modal-header">
+    <h2>Request data</h2>
+  </div>
   <div class="summary modal-body">
-    <pre>
+    <pre #pre style="max-height: 70vh; overflow-y:auto">
         {{input | json}}
     </pre>
+  </div>
+  <!-- <div style="position: relative">
+      <input #hiddenInput style="position:relative; top:-200px">
+  </div> -->
+
+  <div class="modal-footer">
+    <!-- <a class="btn smy" [ngClass]="!isCopied ? 'btn-info' : 'btn-success'" (click)="copy()" i18n="@@copy-to-clipboard">{{isCopied | clipboard}}</a> -->
+    <div class="col-md-8">
+      <p *ngIf="isCopied" class="text-success">Text copied to clipboard!</p>
+    </div>
+    <div class="col-md-3">
+      <a class="btn btn-info smy" (click)="copy()" i18n="@@copy-to-clipboard">Copy to clipboard</a>
+    </div>
   </div>
 </div>
