Anadidos botones para visualizar las peticiones y las respuestas generadas con ciertas acciones en la web (busqueda de hoteles, quote, book, busqueda en mybookings y cancelaciones)

--- a/src/app/platform/components/booking-detail/booking-detail.component.html
+++ b/src/app/platform/components/booking-detail/booking-detail.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4 pb-4">
       <a class="btn btn-sm btn-info smy" (click)="showRequest()" i18n="@@show-request">Show RQ</a>
-      <a class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-request">Show RS</a>
+      <a class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response">Show RS</a>
     </div>
   </div>
   <div class="media">
