--- a/src/app/platform/components/valuation-modal/valuation-modal.component.html
+++ b/src/app/platform/components/valuation-modal/valuation-modal.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="col-md-4">
             <a class="btn btn-sm btn-info smy" (click)="showRequest()" i18n="@@show-request">Show RQ</a>
-            <a class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-request">Show RS</a>
+            <a class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response">Show RS</a>
         </div>
       </div>
 
